--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+@config "../tailwind.config.js";
 @import "tailwindcss";
 @source "../index.html";
 @source "./**/*.{js,jsx,ts,tsx}";
@@ -7,10 +9,10 @@
     --color-background: 15 20 24;
     --color-foreground: 240 242 245;
     --color-card: 20 26 31;
-    --color-primary: 32 178 166;
+    --color-primary: 32 250 30;
     --color-primary-foreground: 255 255 255;
-    --color-secondary: 31 40 48;
-    --color-secondary-foreground: 32 178 166;
+    --color-secondary: 31 240 10;
+    --color-secondary-foreground: 32 240 20;
     --color-muted: 37 46 55;
     --color-muted-foreground: 122 132 145;
     --color-border: 36 43 50;
@@ -165,7 +167,7 @@
     }
   }
 
-  .group:hover .animated-border-path {
+  .animated-border-path {
     animation: animated-border 1.5s linear infinite;
   }
 
